# GNN_Gym

./: .gitignore  AGENTS.md  LICENSE  MoNbTaW.csv  README.md  UT10_loss_metrics.ipynb  UT11_barrier_over_entropy.ipynb  UT1_test_oracle.ipynb  UT2_bulk_calculation.ipynb  UT3_check_computational_time_database.ipynb  UT4_Test_graph_creation.ipynb  UT5_Test_dataloader.ipynb  UT6_train_model.ipynb  UT7_Oracle_to_trained_model.ipynb  UT8_test_cycle.ipynb  UT9_active_learning.ipynb  atomic_properties.py  build_lmdb_dataset.py  config.py  config_final_model.py  convert_cif_to_npz.py  dataset.py  debug.py  environment.lock.yml  environment.yml  fixed_test_set.py  graph_builder.py  inference.py  lmdb_dataset.py  model.py  oracle.py  pyproject.toml  run.sh  template_graph_builder.py  test.sh  test_oracle.py  train.ipynb  train_final_model.py  trainer.py  utils.py  (+1 more)
KMC/: analysis.py  barrier_predictor.py  check_status.py  checkpoint.py  config.py  engine.py  main.py  observables.py  process_checkpoint.py  result.py  run_10cube_T_sweep.sh  run_sweep8.sh  run_until_done.sh  runner.py  state.py  summary_pdf.py  trajectory_writer.py
KMC/demos/: benchmark_predictor.py  bicrystal_TaW.py  (+2 more)
diffusion/: __init__.py  config.py  diffusion_calc.py  diffusion_oracle.py  diffusion_physics.py  results.py
examples/: kmc_single_temperature.json  kmc_temperature_sweep.json
gnn/: __init__.py  active_learning.py  config.py  convert_cif_to_npz.py  dataset.py  fixed_test_set.py  graph_builder.py  inference.py  model.py  oracle.py  trainer.py  utils.py
tests/: test_imports.py  test_kmc_gnn_bridge.py
wandb/: latest-run
(+518 files in other folders)
